--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -5,7 +5,7 @@ spring:
 build:
   version: "1.0.0"
 cards:
-  message: "Welcome to EazyBank Cards related prod APIs"
+  message: "Welcome to EazyBank Cards related production APIs"
   contactDetails:
     name: "Reine Aishwarya - Product Owner"
     email: "reine@eazybank.com"
