--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -1,7 +1,7 @@
 build:
   version: "1.0.0"
 loans:
-  message: "Welcome to EazyBank Loans related prod APIs"
+  message: "Welcome to EazyBank Loans related production APIs"
   contactDetails:
     name: "Reine Aishwarya - Product Owner"
     email: "reine@eazybank.com"
