--- a/loans.yml
+++ b/loans.yml
@@ -1,7 +1,7 @@
 build:
   version: "3.0.0"
 loans:
-  message: "Welcome to EazyBank Loans related APIs"
+  message: "Welcome to EazyBank Loans related docker APIs"
   contactDetails:
     name: "John Doe - Developer"
     email: "john@eazybank.com"
